--- a/main.scss
+++ b/main.scss
@@ -176,7 +176,7 @@ span {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 0;
+  z-index: 1;
   fill: #ffdd00;
   color: black;
   position: absolute;
@@ -236,11 +236,9 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   h2 {
     position: absolute;
     color: $headline-color;
-    z-index: 0;
     opacity: 0.05;
   }
 }
@@ -248,16 +246,21 @@ section {
 .home {
   position: relative;
   background: $strevitz-yellow;
+  overflow: hidden;
+  height: 110vh;
 }
 
 .project {
   position: relative;
   background: white;
+  overflow-x: hidden;
+  height: 120vh;
 }
 
 .contact {
   position: relative;
   background: black;
+  overflow: hidden;
 }
 
 #firsttext {
@@ -269,7 +272,6 @@ section {
   color: white;
 }
 
-#headline1,
 #headline2,
 #headline3 {
   font-size: $headline-size;
@@ -279,7 +281,13 @@ section {
   z-index: 0;
 }
 
-#headline1,
+#headline1 {
+  font-size: 12rem;
+  top: 24%;
+  left: 27%;
+  transform: translate(-50%, -50%);
+}
+
 #headline4 {
   font-size: 12rem;
   top: 20%;
@@ -294,7 +302,7 @@ section {
 
 /***********************[ Form ]***********************/
 
-.form {
+form {
   order: 1;
   width: 100%;
   display: flex;
@@ -419,15 +427,61 @@ button {
     display: none !important;
   }
 
+  .home {
+    height: 130vh;
+  }
+
+  .typing {
+    margin-right: 1rem !important;
+    top: 8% !important;
+    left: 8%;
+  }
+
+  .project {
+    height: 145vh;
+    text-align: left;
+  }
+
+  page {
+    margin-top: 1rem;
+    flex-direction: column !important;
+    text-align: left;
+  }
+
+  .portfolio-img {
+    text-align: center;
+  }
+
+  .portfolio-img img {
+    width: 100% !important;
+  }
+
+  .portfolio-description {
+    margin-left: 0 !important;
+  }
+
+  .portfolio-header {
+    margin-top: 1rem !important;
+  }
+
+  .portfolio-text {
+    font-size: 1.3rem !important;
+  }
+
+  h4 {
+    font-size: 2rem !important;
+  }
+
   #headline1 {
     font-size: $headline-size;
-    top: 0%;
-    left: 2%;
+    top: 4%;
+    left: 12%;
     transform: translate(0%, -2%);
   }
 
   .contact-info {
     order: 1;
+    margin-top: 7vh;
     margin-bottom: 5vh;
   }
 
@@ -520,6 +574,7 @@ button {
 .quiz {
   position: relative;
   flex-direction: column;
+  text-align: center;
   min-height: 82vh;
   padding: 0;
   margin: 0;
@@ -623,7 +678,157 @@ body.wrong {
 }
 
 h3 {
+  margin-bottom: 2rem;
+}
+
+h4,
+h5 {
+  font-weight: 200;
+  margin: 0.4em 0.4em;
+}
+h4 {
+  font-size: 3em;
+}
+h5 {
+  color: #333333;
+  font-size: 1.5em;
+}
+
+.typing {
+  position: absolute;
+  top: 20%;
+  left: 8%;
   display: flex;
-  font-size: 1.4rem;
-  margin-bottom: 90px;
+  justify-content: flex-start;
+  flex-direction: column;
+  margin-right: 3rem;
+}
+
+// slider
+
+carousel {
+  width: 100%;
+  display: block;
+  font-weight: normal;
+
+  page {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    padding: 0 2rem;
+    top: 8rem;
+    left: 0;
+    width: 100%;
+    transition: transform 0.5s;
+    transform: scale(0);
+
+    label {
+      cursor: pointer;
+      background: $strevitz-yellow;
+      padding: 4px 10px;
+      border: 1px solid black;
+      border-radius: 8px;
+    }
+  }
+  @for $i from 1 through 7 {
+    #page#{$i}cb:checked ~ {
+      #page#{$i} {
+        transform: scale(1);
+      }
+    }
+  }
+}
+
+.portfolio-description {
+  margin-left: 3rem;
+}
+
+.portfolio-img img {
+  width: 42vw;
+  height: auto;
+}
+
+.portfolio-text {
+  font-size: 1.5rem;
+  font-weight: 200;
+  margin-bottom: 1rem;
+}
+
+.portfolio-header {
+  margin-top: 0;
+}
+
+// cookies compliance message
+#okCookie {
+  background-color: black;
+  color: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  font-family: sans-serif;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-top: 1px solid #494949;
+  z-index: 10;
+}
+
+#okCookie p {
+  margin: 0 0 10px 0;
+  float: left;
+  padding: 5px 0px;
+}
+
+#okCookie #okClose,
+#okCookie #okCprivacy {
+  padding: 4px 10px;
+  float: right;
+  margin-left: 10px;
+  text-decoration: none;
+  border-radius: 6px;
+  border: 1px solid black;
+  color: black;
+}
+
+#okCookie #okClose {
+  background-color: $strevitz-yellow;
+}
+
+#okCookie #okClose:hover {
+  background-color: darken($color: $strevitz-yellow, $amount: 10%);
+}
+
+#okCookie #okCprivacy {
+  background-color: white;
+}
+
+#okCookie #okCprivacy:hover {
+  background-color: #d4d4d4;
+}
+
+.okcBeginAnimate {
+  -webkit-animation: myfirst 2s;
+  animation: myfirst 2s;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes myfirst {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Standard syntax */
+@keyframes myfirst {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
