--- a/main.scss
+++ b/main.scss
@@ -31,7 +31,6 @@ nav {
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
 
   h1 {
     font-size: $logo-size;
@@ -189,7 +188,7 @@ footer {
   text-align: center;
   color: white;
   font-size: $footer-size;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 /***********************[ Sections ]***********************/
@@ -257,6 +256,7 @@ section {
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
 #headline3 {
@@ -333,6 +333,7 @@ form {
 
 button {
   align-self: flex-start;
+  width: 80%;
 }
 
 .btn-warning {
@@ -372,8 +373,11 @@ button {
   color: white;
   line-height: 3rem;
   width: 100%;
+  margin-left: 4rem;
+  margin-top: 1.5rem;
   display: flex;
-  justify-content: center;
+  align-self: flex-start;
+  justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
 }
@@ -481,7 +485,7 @@ body.wrong {
 }
 
 .quiz-footer {
-  padding: 0;
+  padding: 6rem 0 1rem;
 }
 
 .footer-text-box {
@@ -507,6 +511,10 @@ h4 {
 h5 {
   color: #333333;
   font-size: 1.5em;
+}
+
+h6 {
+  font-size: 0.8rem;
 }
 
 .typing {
@@ -627,6 +635,22 @@ carousel {
   animation: myfirst 2s;
 }
 
+/***********************[ weather forecast ]***********************/
+
+.weather-form {
+  align-items: center !important;
+  z-index: 4 !important;
+}
+
+.weather-form input {
+  padding: 5px 8px !important;
+  border-radius: 8px !important;
+}
+
+.App {
+  justify-content: center;
+}
+
 /* Chrome, Safari, Opera */
 @-webkit-keyframes myfirst {
   from {
@@ -708,6 +732,7 @@ carousel {
 
   .contact-info {
     order: 1;
+    margin-left: 0;
     margin-top: 7vh;
     margin-bottom: 5vh;
   }
@@ -733,6 +758,10 @@ carousel {
     position: relative;
   }
 
+  ul {
+    justify-content: center !important;
+  }
+
   .bubble {
     display: none;
   }
@@ -753,42 +782,29 @@ carousel {
     width: 100%;
     flex-direction: column;
     clip-path: circle(100px at 90% -10%);
+    -webkit-clip-path: circle(100px at 90% -10%);
     transition: all 1s ease-out;
     pointer-events: none;
   }
 
   .nav-links.open {
     clip-path: circle(1000px at 90% -10%);
+    -webkit-clip-path: circle(1000px at 90% -10%);
     pointer-events: all;
     align-items: center;
   }
 
   .nav-links li {
-    opacity: 0;
+    opacity: 1;
+    padding: 1.5rem 0;
   }
 
   .nav-links li a {
     font-size: $anchor-size-mobile;
   }
 
-  .nav-links li:nth-child(1) {
-    transition: all 0.5s ease 0.2s;
-  }
-
-  .nav-links li:nth-child(2) {
-    transition: all 0.5s ease 0.4s;
-  }
-
-  .nav-links li:nth-child(3) {
-    transition: all 0.5s ease 0.5s;
-  }
-
-  .nav-links li:nth-child(4) {
-    transition: all 0.5s ease 0.6s;
-  }
-
-  .nav-links li.fade {
-    opacity: 1;
+  .weather-form {
+    align-items: center !important;
   }
 }
 
