--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 /***********************[ Header ]***********************/
 
 header {
@@ -22,6 +26,12 @@ header {
   background: white;
   z-index: 9;
   overflow: hidden;
+}
+
+.logo-text {
+  font-family: "Pacifico", cursive;
+  color: #18c9e0;
+  font-size: 1.8rem;
 }
 
 nav {
@@ -54,41 +64,25 @@ nav {
     color: #000000;
     &:hover {
       text-decoration: none;
-      color: #666666 !important;
+      color: #18c9e0 !important;
     }
   }
 }
 
 .bubble {
   position: absolute;
-  z-index: -2;
-  transform: scale(1.4);
+  z-index: -1;
+  transform: scale(1.2);
   transition: all 0.5s ease;
-  border-radius: 8%;
+  border-radius: 6%;
   margin-top: 2px;
-  border: 1px solid black;
+  border: 1px solid #18c9e0;
 }
 
 /***********************[ Nav Brand ]***********************/
 
 span {
   margin-left: 6px;
-}
-
-.static {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  background: white;
-}
-
-.static:hover {
-  opacity: 0;
-}
-
-.active {
-  width: 40px;
-  height: 40px;
 }
 
 /***********************[ Cursor ]***********************/
@@ -276,7 +270,7 @@ form {
 }
 
 .name-form {
-  width: 80%;
+  width: 100%;
   height: 67px;
   position: relative;
   overflow: hidden;
@@ -333,11 +327,12 @@ form {
 
 button {
   align-self: flex-start;
-  width: 80%;
+  width: 100%;
 }
 
 .btn-warning {
   background-color: $strevitz-yellow;
+  border-radius: 6px !important;
 }
 
 /***********************[ Contact links ]***********************/
@@ -549,8 +544,7 @@ carousel {
       cursor: pointer;
       background: $strevitz-yellow;
       padding: 4px 10px;
-      border: 1px solid black;
-      border-radius: 8px;
+      border-radius: 6px;
     }
   }
   @for $i from 1 through 7 {
@@ -579,6 +573,11 @@ carousel {
 
 .portfolio-header {
   margin-top: 0;
+}
+
+.portfolio-description a {
+  color: #18c9e0;
+  text-decoration: none;
 }
 /***********************[ Cookies compliance message ]***********************/
 #okCookie {
@@ -635,16 +634,28 @@ carousel {
   animation: myfirst 2s;
 }
 
-/***********************[ weather forecast ]***********************/
+/***********************[ weather forecast & currency converter ]***********************/
 
 .weather-form {
   align-items: center !important;
   z-index: 4 !important;
 }
 
-.weather-form input {
+.weather-form input,
+.currency-input,
+.currency-select {
   padding: 5px 8px !important;
   border-radius: 8px !important;
+}
+
+.currency-select {
+  background: #000;
+  color: white;
+  font-size: 1.2rem;
+}
+
+.equals {
+  font-size: 2rem;
 }
 
 .App {
